# SegmentDisplayModule

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  clone.sh
example/: CMakeLists.txt
example/src/: main.cpp
include/: Animations.h  SegmentDisplayModule.h  TemplateModule.h
src/: SegmentDisplayModule.cpp  TemplateModule.cpp
